refactor(cards): add svgs waves

--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -6,48 +6,54 @@ section.cards#cards
     .row.row-cols-1.row-cols-sm-2.row-cols-lg-3.g-4.g-lg-5
       .col
         .card.card-dark
-          +cardsPicture("landscape_tree_black", "Web Design")
+          .card-picture
+            img.card-img(src="images/cards/card-1.svg" alt="Web Design")
           .card-img-overlay.card-d-flex
             h3.card-title Web Design
             p.card-text Made with love and in accordance with the newest technologies.
-            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Web Design") Services &#8594;
+            a.btn.card-link(href="services.html" aria-label="Card Web Design") Services &#8594;
 
       .col
         .card.card-dark
-          +cardsPicture("lighthouse_lantern_sky_storm_night", "Web Development")
+          .card-picture
+            img.card-img(src="images/cards/card-2.svg" alt="Web Development")
           .card-img-overlay.card-d-flex
             h3.card-title Web Dev
             p.card-text We devote our attention to writing every line of code.
-            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Web Dev") Services &#8594;
+            a.btn.card-link(href="services.html" aria-label="Card Web Dev") Services &#8594;
 
       .col
         .card.card-dark
-          +cardsPicture("road_sunset_marking_grass", "Mobile Development")
+          .card-picture
+            img.card-img(src="images/cards/card-3.svg" alt="Mobile Development")
           .card-img-overlay.card-d-flex
             h3.card-title Mobile Dev
             p.card-text Turn devices into miniature power station of function and fun.
-            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Mobile Dev") Services &#8594;
+            a.btn.card-link(href="services.html" aria-label="Card Mobile Dev") Services &#8594;
 
       .col
         .card.card-dark
-          +cardsPicture("sunset_sun_clouds", "Web Applications")
+          .card-picture
+            img.card-img(src="images/cards/card-4.svg" alt="Web Applications")
           .card-img-overlay.card-d-flex
             h3.card-title Web Apps
             p.card-text Take advantage of technology, interact with your user.
-            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Web Apps") Services &#8594;
+            a.btn.card-link(href="services.html" aria-label="Card Web Apps") Services &#8594;
 
       .col
         .card.card-dark
-          +cardsPicture("sea_surf_wave_sunset", "Smart Solutions")
+          .card-picture
+            img.card-img(src="images/cards/card-5.svg" alt="Smart Solutions")
           .card-img-overlay.card-d-flex
             h3.card-title Smart Solutions
             p.card-text Make your daily life better and easier with high-end technology.
-            a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Smart Solutions") Services &#8594;
+            a.btn.card-link(href="services.html" aria-label="Card Smart Solutions") Services &#8594;
 
       .col
         .card.card-dark
-          +cardsPicture("sea_waves_rocks_beach_sunrise", "Portfolio")
+          .card-picture
+            img.card-img(src="images/cards/card-6.svg" alt="Portfolio")
           .card-img-overlay.card-d-flex
             h3.card-title Portfolio
             p.card-text Look at showcase of our creative and inspired work.
-            a.btn.btn-outline-orange.card-link(href="portfolio.html" aria-label="Card Portfolio") Portfolio &#8594;
+            a.btn.card-link(href="portfolio.html" aria-label="Card Portfolio") Portfolio &#8594;
