--- a/src/views/mixins/_pictures.pug
+++ b/src/views/mixins/_pictures.pug
@@ -4,12 +4,12 @@
 //- Cards Picture
 //------------------------
 //- Usage: +cardsPicture("name", "alt")
-mixin cardsPicture(name, alt)
-  picture.card-picture
-    source(type="image/webp" srcset=`images/cards/${name}.webp`)
-    source(type="image/jpeg" srcset=`images/cards/${name}.jpg`)
-    img.lazy-cards.lazyload.card-img(
-      loading="lazy" data-src=`images/cards/${name}.jpg` alt=alt)
+//- mixin cardsPicture(name, alt)
+//-   picture.card-picture
+//-     source(type="image/webp" srcset=`images/cards/${name}.webp`)
+//-     source(type="image/jpeg" srcset=`images/cards/${name}.jpg`)
+//-     img.lazy-cards.lazyload.card-img(
+//-       loading="lazy" data-src=`images/cards/${name}.jpg` alt=alt)
 
 //- Carousel Items
 //------------------------
