--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -85,7 +85,7 @@
 @import "components/features";
 @import "components/carousel";
 @import "components/testimonials";
-@import "components/parallax";
+@import "components/story";
 @import "components/tags";
 @import "components/tech";
 @import "components/footer";
