style(story): update story section

--- a/src/views/includes/sections/_story.pug
+++ b/src/views/includes/sections/_story.pug
@@ -9,7 +9,7 @@ section.story#story
     .story-overlay
       .container
         .row.justify-content-center
-          .col.col-lg-8.col-hd-6
+          .col.col-lg-8.col-hd-6.text-center
             h2
-              | Once upon a time, we started a journey, to discover, to learn...
-              | #[span.p-2 beautiful things].
+              | Once upon a time, we started a journey, to discover, to learn
+              | #[span.p-2 beautiful things]
