refactor(cards): update features section

--- a/src/views/includes/sections/_features.pug
+++ b/src/views/includes/sections/_features.pug
@@ -7,7 +7,7 @@ section.features.text-center#features
 
     .row.row-cols-1.row-cols-sm-2.row-cols-lg-3.mt-0.mb-5.g-4.g-lg-5
       .col
-        .card.card-orange.h-100
+        .card.h-100
           .card-img
             //- i.fas.fa-tachometer-alt.fa-5x
             img.svg-inline--fa.fa-5x#fa-tachometer-alt(src="fonts/svgs/solid/tachometer-alt.svg" alt="tachometer-alt" inline)
@@ -16,7 +16,7 @@ section.features.text-center#features
             p.card-text Made with love and in accordance with the newest technologies.
 
       .col
-        .card.card-grey.h-100
+        .card.h-100
           .card-img
             //- i.fas.fa-tools.fa-5x
             img.svg-inline--fa.fa-5x#fa-tools(src="fonts/svgs/solid/tools.svg" alt="tools" inline)
@@ -25,7 +25,7 @@ section.features.text-center#features
             p.card-text Examination of page performance to achieve your goals.
 
       .col
-        .card.card-blue.h-100
+        .card.h-100
           .card-img
             //- i.fas.fa-medal.fa-5x
             img.svg-inline--fa.fa-5x#fa-medal(src="fonts/svgs/solid/medal.svg" alt="medal" inline)
@@ -34,7 +34,7 @@ section.features.text-center#features
             p.card-text Generate leads for your business through organic traffic.
 
       .col
-        .card.card-grey.h-100
+        .card.h-100
           .card-img
             //- i.fas.fa-heartbeat.fa-5x
             img.svg-inline--fa.fa-5x#fa-heartbeat(src="fonts/svgs/solid/heartbeat.svg" alt="heartbeat" inline)
@@ -43,7 +43,7 @@ section.features.text-center#features
             p.card-text Follow the best practices for modern web development.
 
       .col
-        .card.card-green.h-100
+        .card.h-100
           .card-img
             //- i.fas.fa-universal-access.fa-5x
             img.svg-inline--fa.fa-5x#fa-universal-access(src="fonts/svgs/solid/universal-access.svg" alt="universal-access" inline)
@@ -52,7 +52,7 @@ section.features.text-center#features
             p.card-text Provide equal access, no barriers that prevent interaction.
 
       .col
-        .card.card-grey.h-100
+        .card.h-100
           .card-img
             //- i.fas.fa-desktop.fa-5x
             img.svg-inline--fa.fa-5x#fa-desktop(src="fonts/svgs/solid/desktop.svg" alt="desktop" inline)
