--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -17,7 +17,7 @@
 .portfolio,
 .services,
 .feature,
-.parallax,
+.story,
 .testimonials,
 .footer-container {
   background-color: var(--ad-body-bg);
