--- a/src/views/includes/pages/_features.pug
+++ b/src/views/includes/pages/_features.pug
@@ -5,7 +5,7 @@ section.feature#features-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +featuresPicture("features", "dawn_desktop_background_dusk", "jpg", "Performance")
+        +featuresPicture("features", "features-1", "svg", "Performance")
       .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Performance
         p.mb-3.fw-bold.
@@ -20,7 +20,7 @@ section.feature#features-2
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +featuresPicture("features", "architecture_blur_building_exterior", "jpg", "Audit Ready")
+        +featuresPicture("features", "features-2", "svg", "Audit Ready")
       .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Audit Ready
         p.mb-3.fw-bold.
@@ -35,7 +35,7 @@ section.feature#features-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +featuresPicture("features", "sea_waves_rocks_beach_sunrise", "jpg", "SEO Ready")
+        +featuresPicture("features", "features-3", "svg", "SEO Ready")
       .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start SEO Ready
         p.mb-3.fw-bold.
@@ -50,7 +50,7 @@ section.feature#features-4
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +featuresPicture("features", "wallpaper_autumn_branches", "jpg", "Best practices")
+        +featuresPicture("features", "features-4", "svg", "Best practices")
       .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Best practices
         p.mb-3.fw-bold.
@@ -65,7 +65,7 @@ section.feature#features-5
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +featuresPicture("features", "clouds_daylight_forest", "jpg", "Accessibility")
+        +featuresPicture("features", "features-5", "svg", "Accessibility")
       .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Accessibility
         p.mb-3.fw-bold.
@@ -80,7 +80,7 @@ section.feature#features-6
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +featuresPicture("features", "background_beautiful_clouds", "jpg", "Responsive design")
+        +featuresPicture("features", "features-6", "svg", "Responsive design")
       .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Responsive design
         p.mb-3.fw-bold.
