--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -5,7 +5,7 @@ section.portfolio#portfolio-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +featuresPicture("portfolio", "boodark", "png", "BooDark")
+        +portfolioPicture("portfolio", "boodark", "png", "BooDark")
       .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start BooDark
         p.mb-0 A modern Bootstrap Dark theme for phpMyAdmin.
@@ -26,7 +26,7 @@ section.portfolio#portfolio-2
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +featuresPicture("portfolio", "unikorn", "png", "UniKorn")
+        +portfolioPicture("portfolio", "unikorn", "png", "UniKorn")
       .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start UniKorn
         p.mb-0 Frontend framework for designing websites and web applications.
@@ -47,7 +47,7 @@ section.portfolio#portfolio-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +featuresPicture("portfolio", "respo", "png", "Respo")
+        +portfolioPicture("portfolio", "respo", "png", "Respo")
       .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Respo
         p.mb-0 Responsive design check tool, see how websites looks on different devices.
@@ -68,7 +68,7 @@ section.portfolio#portfolio-4
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +featuresPicture("portfolio", "webmagia", "png", "WebMagia")
+        +portfolioPicture("portfolio", "webmagia", "png", "WebMagia")
       .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start WebMagia
         p.mb-0 High Quality WordPress Premium Templates.
@@ -88,7 +88,7 @@ section.portfolio#portfolio-5
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +featuresPicture("portfolio", "timero", "png", "Timero")
+        +portfolioPicture("portfolio", "timero", "png", "Timero")
       .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Timero
         p.mb-0 A fresh way to save your time, without any distraction.
