--- a/src/views/includes/pages/_services.pug
+++ b/src/views/includes/pages/_services.pug
@@ -5,7 +5,7 @@ section.services#services-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +featuresPicture("services", "landscape_tree_black", "jpg", "Web Design")
+        +featuresPicture("services", "services-1", "svg", "Web Design")
       .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Web Design
         p.mb-3.fw-bold.
@@ -19,7 +19,7 @@ section.services#services-2
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +featuresPicture("services", "lighthouse_lantern_sky_storm_night", "jpg", "Web Development")
+        +featuresPicture("services", "services-2", "svg", "Web Development")
       .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Web Development
         p.mb-3.fw-bold.
@@ -33,7 +33,7 @@ section.services#services-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +featuresPicture("services", "road_sunset_marking_grass", "jpg", "Mobile Apps")
+        +featuresPicture("services", "services-3", "svg", "Mobile Apps")
       .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Mobile Apps
         p.mb-3.fw-bold.
@@ -47,7 +47,7 @@ section.services#services-4
   .container
     .row.align-items-center
       .col-12.col-md-6
-        +featuresPicture("services", "sunset_sun_clouds", "jpg", "Web Applications")
+        +featuresPicture("services", "services-4", "svg", "Web Applications")
       .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Web Applications
         p.mb-3.fw-bold.
@@ -61,7 +61,7 @@ section.services#services-5
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        +featuresPicture("services", "sea_surf_wave_sunset", "jpg", "Smart Solutions")
+        +featuresPicture("services", "services-5", "svg", "Smart Solutions")
       .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Smart Solutions
         p.mb-3.fw-bold.
