--- a/src/views/mixins/_pictures.pug
+++ b/src/views/mixins/_pictures.pug
@@ -8,7 +8,7 @@
 //-   picture.card-picture
 //-     source(type="image/webp" srcset=`images/cards/${name}.webp`)
 //-     source(type="image/jpeg" srcset=`images/cards/${name}.jpg`)
-//-     img.lazy-cards.lazyload.card-img(
+//-     img.lazy-cards.card-img(
 //-       loading="lazy" data-src=`images/cards/${name}.jpg` alt=alt)
 
 //- Carousel Items
@@ -20,17 +20,17 @@ mixin carouselPicture(name, alt)
     source(type="image/webp" srcset=`images/portfolio/${name}-min.webp`)
     source(type="image/png" srcset=`images/portfolio/${name}.png` media="(min-width: 576px)")
     source(type="image/png" srcset=`images/portfolio/${name}-min.png`)
-    img.lazy-carousel.lazyload.carousel-img(
+    img.lazy-carousel.carousel-img(
       loading="lazy" data-src=`images/portfolio/${name}.png` alt=alt)
 
-//- Parallax Picture
+//- Story Picture
 //------------------------
-//- Usage: +parallaxPicture("name", "alt")
-//- mixin parallaxPicture(name, alt)
-//-   picture.parallax-picture
+//- Usage: +storyPicture("name", "alt")
+//- mixin storyPicture(name, alt)
+//-   picture.story-picture
 //-     source(type="image/webp" data-srcset=`images/hero-unit/${name}.webp`)
 //-     source(type="image/jpeg" data-srcset=`images/hero-unit/${name}.jpg`)
-//-     img.lazy-parallax.lazyload.parallax-img(
+//-     img.lazy-story.story-img(
 //-       loading="lazy" data-src=`images/hero-unit/${name}.jpg` alt=alt)
 
 //- Top Banner
@@ -48,11 +48,16 @@ mixin banner(name, alt)
 //- Features Picture
 //------------------------
 //- Usage: +featuresPicture("path", "name", "type", "alt")
-//- services, info, portfolio
+//- features, services
 mixin featuresPicture(path, name, type, alt)
+  picture.picture-wrapper.shadow-lg
+    img.lazy-features(
+      loading="lazy" data-src=`images/${path}/${name}.${type}` alt=alt)
+
+//- portfolio
+mixin portfolioPicture(path, name, type, alt)
   picture.picture-wrapper.shadow-lg
     source(type="image/webp" srcset=`images/${path}/${name}.webp`)
     source(type=`image/${type}` srcset=`images/${path}/${name}.${type}`)
-    img.lazy-features.lazyload(
-      src=`images/${path}/${name}.${type}` inline
+    img.lazy-features(
       loading="lazy" data-src=`images/${path}/${name}.${type}` alt=alt)
