--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -35,7 +35,7 @@
 
 .picture-wrapper {
   // You should use a 16:9 image ratio, such as 540x304 px.
-  @include picture(16 9, ".lazy-features", false, true);
+  @include picture(16 9, ".lazy-features", true);
 }
 
 .fade-in {
