--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -32,5 +32,6 @@ html(lang="en" data-bs-theme="dark" prefix="og: http://ogp.me/ns#")
       include ../includes/forms/_modal-get-quote
     include ../includes/misc/_get-in-touch
     include ../includes/misc/_back-to-top
+    include ../includes/misc/_cc-settings
     block scripts
       include ../partials/_scripts
