--- a/src/views/modules/header/_header-cookies.pug
+++ b/src/views/modules/header/_header-cookies.pug
@@ -1,7 +1,7 @@
 //- modules/header/_header-cookie.pug
 include ../../mixins/_pictures
 
-header.masthead.bg-dark
+header.masthead
   .mastehead-overlay
     h1.mb-0 Cookies Policy
     h6.mb-0 Dream Big. Think Different. Do Better
