--- a/src/scss/includes/_color-scheme.scss
+++ b/src/scss/includes/_color-scheme.scss
@@ -27,4 +27,28 @@
   --ad-offcanvas-header-bg: #{darken($gray-900, 5%)};
   --bs-border-color-translucent: rgba(0, 0, 0, .175);
   --ad-social-link: #{$grey-100};
+
+  // Cookie Consent
+  --cc-bg: #{$gray-900};
+  --cc-text: #{$gray-100};
+  --cc-btn-primary-bg: #a6c4dd;
+  --cc-btn-primary-text: #000;
+  --cc-btn-primary-hover-bg: #c2dff7;
+  --cc-btn-primary-hover-text: var(--cc-btn-primary-text);
+  --cc-btn-secondary-bg: #33383c;
+  --cc-btn-secondary-text: var(--cc-text);
+  --cc-btn-secondary-hover-bg: #3e454a;
+  --cc-btn-secondary-hover-text: var(--cc-btn-secondary-text);
+  --cc-toggle-bg-off: #667481;
+  --cc-toggle-bg-on: var(--cc-btn-primary-bg);
+  --cc-toggle-bg-readonly: #454c54;
+  --cc-toggle-knob-bg: var(--cc-cookie-category-block-bg);
+  --cc-toggle-knob-icon-color: var(--cc-bg);
+  --cc-block-text: #b3bfc5;
+  --cc-cookie-category-block-bg: #23272a;
+  --cc-cookie-category-block-bg-hover: #2b3035;
+  --cc-section-border: #292d31;
+  --cc-cookie-table-border: #2b3035;
+  --cc-webkit-scrollbar-bg: #667481;
+  --cc-webkit-scrollbar-bg-hover: #9199a0;
 }
