--- a/src/views/partials/_scripts.pug
+++ b/src/views/partials/_scripts.pug
@@ -1,13 +1,13 @@
 //- partials/_scripts.pug
 block external-js
-  //--- Adorade JS Files
-  //- external scripts here (cdn), then ...
+  //--- Adorade JS Files, external scripts here (cdn)
+  script#vendors(defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous")
+  script#cc-script(defer src="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@2.9.2/dist/cookieconsent.min.js"
+    integrity="sha384-8y31riJCK5o7EJKT3uqBIXLua6tM6FC0Q06Zl0yrrd/TsiJVX/v78t9Rb5c5335W" crossorigin="anonymous")
 
 block vendors-js
   //--- Vendors main JS
-  //- bootstrap bundle 5.3.2            - modules
-  //- cookieconsent 3.1.1               - modules
-  script#vendors(defer src="js/vendors.min.js")
 
 block custom-js
   //--- Main Script
