--- a/src/views/partials/_statics.pug
+++ b/src/views/partials/_statics.pug
@@ -4,9 +4,10 @@
 link(rel="icon" href="statics/icons/favicon.ico" sizes="any")
 link(rel="icon" type="image/svg+xml" href="statics/icons/favicon.svg")
 link(rel="apple-touch-icon" sizes="180x180" href="statics/icons/apple-touch-icon.png")
-link(rel="mask-icon" href="statics/icons/safari-pinned-tab.svg" color="#5bbad5")
+link(rel="mask-icon" href="statics/icons/safari-pinned-tab.svg" color="#009688")
 link(rel="manifest" href="site.webmanifest")
 meta(name="apple-mobile-web-app-title" content="Adorade")
-meta(name="msapplication-TileColor" content="#da532c")
+meta(name="msapplication-TileColor" content="#212529")
 meta(name="msapplication-config" content="browserconfig.xml")
-meta(name="theme-color" content="#ff5722")
+meta(name="theme-color" media="(prefers-color-scheme: dark)" content="#212529")
+meta(name="theme-color" media="(prefers-color-scheme: light)" content="#e9ecef")
