--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   padding: 3.5rem 0;
 
-  @media (min-width: 1920px) {
+  @include media-breakpoint-up(hd) {
     .container {
       max-width: 1440px;
     }
