--- a/src/scss/components/_misc.scss
+++ b/src/scss/components/_misc.scss
@@ -25,7 +25,7 @@
       color: rgba(255, 255, 255, 1);
     }
 
-    @media (min-width: 576px) {
+    @include media-breakpoint-up(sm) {
       font-size: 4rem;
     }
   }
@@ -89,7 +89,7 @@
   text-transform: uppercase;
   transition: all .5s ease-in-out;
 
-  @media (max-width: 767.98px) {
+  @include media-breakpoint-down(md) {
     display: flex;
     padding: .5rem;
     border: 0;
