--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -38,7 +38,7 @@
 
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
-    filter: invert(1) grayscale(100)
+    filter: invert(1) grayscale(100);
   }
 }
 
