--- a/src/scss/components/_misc.scss
+++ b/src/scss/components/_misc.scss
@@ -16,13 +16,13 @@
     z-index: 1035;
     display: inline-flex;
     margin: 0 auto;
-    color: rgba(255, 255, 255, .7);
+    color: rgba($base-color, .7);
     font-size: 3rem;
     transition: all .2s ease-in;
     cursor: pointer;
 
     &:hover {
-      color: rgba(255, 255, 255, 1);
+      color: rgba($base-color, 1);
     }
 
     @include media-breakpoint-up(sm) {
@@ -50,10 +50,10 @@
     position: relative;
     padding: .5rem;
     margin: 0;
-    overflow: hidden;
     border-radius: var(--bs-border-radius);
+    overflow: hidden;
     background-color: rgba($base-gray, .5);
-    color: #f8f9fa;
+    color: $white;
     font-size: 1.25rem;
     text-align: center;
     transition: all .5s ease-in-out;
@@ -83,7 +83,7 @@
 // --------------------------
 .get-in-touch {
   --bs-btn-padding-y: .5rem;
-  color: #fff;
+  color: $white;
   font-size: .75rem;
   font-weight: 900;
   text-transform: uppercase;
@@ -101,7 +101,7 @@
   }
 
   &:hover {
-    color: #fff;
+    color: $white;
   }
 }
 
@@ -116,6 +116,11 @@
     background-image: none;
     color: $white;
     font-size: 1.25rem;
+
+    &:hover,
+    &:active {
+      color: $white;
+    }
   }
 }
 
