--- a/src/scss/mixins/_gradients.scss
+++ b/src/scss/mixins/_gradients.scss
@@ -51,6 +51,7 @@
 // Carbon Fibre
 // Usage:  @include radial-gradient-carbon-fibre(#dddddd);
 @mixin carbon-fibre($fallback) {
+  background-color: $fallback;
   background-image:
     radial-gradient(rgb(0, 0, 0) 15%, transparent 16%),
     radial-gradient(rgb(0, 0, 0) 15%, transparent 16%),
@@ -58,11 +59,11 @@
     radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%);
   background-position: 0 0, .5rem .5rem, 0 .0625rem, .5rem .5625rem;
   background-size: 1rem 1rem;
-  background-color: $fallback;
 }
 
 @mixin carbon($fallback) {
-  background:
+  background-color: $fallback; // default value: #131313;
+  background-image:
     linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
     linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0,
     linear-gradient(27deg, #222 5px, transparent 5px) 0 10px,
@@ -70,10 +71,10 @@
     linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
     linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
   background-size: 20px 20px;
-  background-color: $fallback; // default value: #131313;
 }
 
 @mixin print-stripe($fallback) {
+  background-color: $fallback; // default value: #269
   background-image:
     linear-gradient(rgba(255, 255, 255, 1) 2px, transparent 2px),
     linear-gradient(90deg, rgba(255, 255, 255, 1) 2px, transparent 2px),
@@ -81,5 +82,4 @@
     linear-gradient(90deg, rgba(255, 255, 255, .3) 1px, transparent 1px);
   background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
   background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
-  background-color: $fallback; // default value: #269
 }
