style(scss): change scss folder architecture

--- a/src/scss/base/_root.scss
+++ b/src/scss/base/_root.scss
@@ -1,5 +1,5 @@
 //
-// Theme Color Scheme
+// Variables for Theme Color Scheme
 // -----------------------------------------------------------------------------
 
 :root,
