--- a/src/scss/core/_grid.scss
+++ b/src/scss/core/_grid.scss
@@ -1,5 +1,5 @@
 //
-// New Grid System - extend bootstrap grid
+// Grid System - extend bootstrap grid
 // -----------------------------------------------------------------------------
 
 // --- Grid breakpoints
