--- a/src/scss/mixins/_gradients.scss
+++ b/src/scss/mixins/_gradients.scss
@@ -1,5 +1,5 @@
 //
-// Gradients
+//  Mixins - Gradients
 // -----------------------------------------------------------------------------
 
 // CSS3 Radial Gradients
