--- a/src/scss/mixins/_mixins.scss
+++ b/src/scss/mixins/_mixins.scss
@@ -1,8 +1,8 @@
 //
-// Styles
+// Mixins
 // -----------------------------------------------------------------------------
 
-@import "mixins/gradients";
-@import "mixins/picture";
-@import "mixins/forms";
-@import "mixins/hover";
+@import "gradients";
+@import "picture";
+@import "forms";
+@import "hover";
