--- a/src/scss/mixins/_picture.scss
+++ b/src/scss/mixins/_picture.scss
@@ -1,5 +1,5 @@
 //
-// Fluid aspect
+//  Mixins - Picture fluid aspect
 // -----------------------------------------------------------------------------
 
 @mixin parent() {
