--- a/src/scss/thanks.scss
+++ b/src/scss/thanks.scss
@@ -8,7 +8,7 @@ body {
   overflow: hidden;
   background-color: #f44336;
   color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
 h1 {
@@ -62,7 +62,6 @@ a {
     fill: #007a70;
   }
 }
-
 
 p:last-of-type {
   margin: 0;
