--- a/src/scss/core/_colors.scss
+++ b/src/scss/core/_colors.scss
@@ -223,7 +223,8 @@ $amber-500       : #ffc107;
 $amber-600       : #ffb300;
 $amber-700       : #ffa000;
 $amber-800       : #ff8f00;
-$amber-900       : #ffe57f;
+$amber-900       : #ff6f00;
+$amber-a100      : #ffe57f;
 $amber-a200      : #ffd740;
 $amber-a400      : #ffc400;
 $amber-a700      : #ffab00;
@@ -297,7 +298,7 @@ $blue-grey-800   : #37474f;
 $blue-grey-900   : #263238;
 
 // --------------------------
-// $black           : #000000;
+// $white           : #ffffff;
 // $gray-100        : #f8f9fa;
 // $gray-200        : #e9ecef;
 // $gray-300        : #dee2e6;
@@ -307,4 +308,4 @@ $blue-grey-900   : #263238;
 // $gray-700        : #495057;
 // $gray-800        : #343a40;
 // $gray-900        : #212529;
-// $white           : #ffffff;
+// $black           : #000000;
