refactor(sw): drop service-worker support

--- a/src/views/partials/_scripts.pug
+++ b/src/views/partials/_scripts.pug
@@ -14,4 +14,4 @@ block custom-js
   if entry.inline
     script#main-min-script(defer src="js/script.min.js")
   else
-    script#main-dev-script(defer src="js/script-dev.js")
+    script#main-dev-script(defer src="js/script.js")
