feat(consent): update cookie consent

--- a/src/views/includes/misc/_cc-settings.pug
+++ b/src/views/includes/misc/_cc-settings.pug
@@ -1,5 +1,5 @@
 //- includes/misc/_cc-settings.pug
 .cookie-settings
-  button.btn.btn-info.btn-settings(type="button" data-cc="c-settings")
+  button.btn.btn-info.btn-settings(type="button" data-cc="show-preferencesModal")
     //- i.fas.fa-cookie-bite
     img.svg-inline--fa.fa-w-16#fa-cookie-bite(src="fonts/svgs/solid/cookie-bite.svg" alt="Cookies" inline)
