--- a/src/scss/base/_root.scss
+++ b/src/scss/base/_root.scss
@@ -13,6 +13,47 @@
   --ad-offcanvas-header-bg: #{darken($gray-100, 5%)};
   --bs-border-color-translucent: rgba(255, 255, 255, .15);
   --ad-social-link: #{$grey-900};
+
+  // Cookie Consent Light mode
+  --cc-bg: #fff;
+  --cc-primary-color: #2c2f31;
+  --cc-secondary-color: #5e6266;
+  --cc-btn-primary-bg: #009688;
+  --cc-btn-primary-color: #fff;
+  --cc-btn-primary-border-color: var(--cc-btn-primary-bg);
+  --cc-btn-primary-hover-bg: #26a69a;
+  --cc-btn-primary-hover-color: #fff;
+  --cc-btn-primary-hover-border-color: var(--cc-btn-primary-hover-bg);
+  --cc-btn-secondary-bg: #eaeff2;
+  --cc-btn-secondary-color: var(--cc-primary-color);
+  --cc-btn-secondary-border-color: var(--cc-btn-secondary-bg);
+  --cc-btn-secondary-hover-bg: #d4dae0;
+  --cc-btn-secondary-hover-color: #000;
+  --cc-btn-secondary-hover-border-color: #d4dae0;
+  --cc-separator-border-color: #f0f4f7;
+  --cc-toggle-on-bg: var(--cc-btn-primary-bg);
+  --cc-toggle-off-bg: #667481;
+  --cc-toggle-on-knob-bg: #fff;
+  --cc-toggle-off-knob-bg: var(--cc-toggle-on-knob-bg);
+  --cc-toggle-enabled-icon-color: var(--cc-bg);
+  --cc-toggle-disabled-icon-color: var(--cc-bg);
+  --cc-toggle-readonly-bg: #d5dee2;
+  --cc-toggle-readonly-knob-bg: #fff;
+  --cc-toggle-readonly-knob-icon-color: var(--cc-toggle-readonly-bg);
+  --cc-section-category-border: var(--cc-cookie-category-block-bg);
+  --cc-cookie-category-block-bg: #f0f4f7;
+  --cc-cookie-category-block-border: var(--cc-cookie-category-block-bg);
+  --cc-cookie-category-block-hover-bg: #e9eff4;
+  --cc-cookie-category-block-hover-border: var(--cc-cookie-category-block-hover-bg);
+  --cc-cookie-category-expanded-block-bg: transparent;
+  --cc-cookie-category-expanded-block-hover-bg: var(--cc-toggle-readonly-bg);
+  --cc-overlay-bg: rgba(0, 0, 0, .65);
+  --cc-webkit-scrollbar-bg: var(--cc-section-category-border);
+  --cc-webkit-scrollbar-hover-bg: var(--cc-btn-primary-hover-bg);
+  --cc-footer-bg: var(--cc-btn-secondary-bg);
+  --cc-footer-color: var(--cc-secondary-color);
+  --cc-footer-border-color: #e4eaed;
+  --cc-modal-margin: .5rem;
 }
 
 [data-bs-theme="dark"] {
@@ -28,27 +69,23 @@
   --bs-border-color-translucent: rgba(0, 0, 0, .175);
   --ad-social-link: #{$grey-100};
 
-  // Cookie Consent
-  --cc-bg: #{$gray-900};
-  --cc-text: #{$gray-100};
-  --cc-btn-primary-bg: #a6c4dd;
-  --cc-btn-primary-text: #000;
-  --cc-btn-primary-hover-bg: #c2dff7;
-  --cc-btn-primary-hover-text: var(--cc-btn-primary-text);
-  --cc-btn-secondary-bg: #33383c;
-  --cc-btn-secondary-text: var(--cc-text);
-  --cc-btn-secondary-hover-bg: #3e454a;
-  --cc-btn-secondary-hover-text: var(--cc-btn-secondary-text);
-  --cc-toggle-bg-off: #667481;
-  --cc-toggle-bg-on: var(--cc-btn-primary-bg);
-  --cc-toggle-bg-readonly: #454c54;
-  --cc-toggle-knob-bg: var(--cc-cookie-category-block-bg);
-  --cc-toggle-knob-icon-color: var(--cc-bg);
-  --cc-block-text: #b3bfc5;
-  --cc-cookie-category-block-bg: #23272a;
-  --cc-cookie-category-block-bg-hover: #2b3035;
-  --cc-section-border: #292d31;
-  --cc-cookie-table-border: #2b3035;
-  --cc-webkit-scrollbar-bg: #667481;
-  --cc-webkit-scrollbar-bg-hover: #9199a0;
+  // Cookie Consent Dark mode
+  --cc-bg: #161a1c;
+  --cc-primary-color: #ebf3f6;
+  --cc-secondary-color: #aebbc5;
+  --cc-btn-secondary-bg: #242c31;
+  --cc-btn-secondary-hover-bg: #353d43;
+  --cc-btn-secondary-hover-color: #fff;
+  --cc-separator-border-color: #222a30;
+  --cc-toggle-off-bg: #525f6b;
+  --cc-toggle-on-knob-bg: var(--cc-btn-primary-color);
+  --cc-toggle-off-knob-bg: var(--cc-btn-primary-color);
+  --cc-toggle-enabled-icon-color: var(--cc-btn-primary-color);
+  --cc-toggle-disabled-icon-color: var(--cc-btn-primary-color);
+  --cc-toggle-readonly-bg: #343e45;
+  --cc-toggle-readonly-knob-bg: #5f6b72;
+  --cc-cookie-category-block-bg: #1e2428;
+  --cc-cookie-category-block-hover-bg: #242c31;
+  --cc-footer-bg: #0c0e0f;
+  --cc-footer-border-color: #060809;
 }
