--- a/src/views/partials/_analytics.pug
+++ b/src/views/partials/_analytics.pug
@@ -1,10 +1,38 @@
 //- partials/_analytics.pug
 if entry.inline
-  //--- Google tag (gtag.js)
-  script(async type="text/plain" data-cookiecategory="analytics" src="https://www.googletagmanager.com/gtag/js?id=G-TB28LRXJ7Y")
-  script(type="text/plain" data-cookiecategory="analytics").
+  script.
+    //- Define dataLayer and the gtag function.
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
 
+    //- Set default consent to 'denied' as a placeholder
+    //- Determine actual values based on your own requirements
+    gtag('consent', 'default', {
+        ad_storage: 'denied',
+        ad_user_data: 'denied',
+        ad_personalization: 'denied',
+        analytics_storage: 'denied',
+        wait_for_update: 500
+    });
+  //--- Google tag (gtag.js)
+  script(async src="https://www.googletagmanager.com/gtag/js?id=G-TB28LRXJ7Y")
+  script.
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+
+    gtag('js', new Date());
     gtag('config', 'G-TB28LRXJ7Y');
+
+  //- Updateconsent parameter for each category
+  script(type="text/plain" data-category="analytics").
+    gtag('consent', 'update', {
+      analytics_storage: 'granted'
+    });
+
+  script(type="text/plain" data-category="!analytics").
+    window['ga-disable-G-TB28LRXJ7Y'] = true;
+
+  script(type="text/plain" data-category="marketing").
+    gtag('consent', 'update', {
+      ad_storage: 'granted'
+    });
